--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -64,6 +64,7 @@
                 <module>org.openwms.app.plan</module>
                 <module>org.openwms.client.flex.app</module>
                 <module>org.openwms.client.flex.wrapper</module>
+                <module>org.openwms.client.rest.provider</module>
             </modules>
         </profile>
         <profile>
@@ -73,6 +74,7 @@
                 <module>org.openwms.app.plan</module>
                 <module>org.openwms.client.flex.app</module>
                 <module>org.openwms.client.flex.wrapper</module>
+                <module>org.openwms.client.rest.provider</module>
             </modules>
         </profile>
     </profiles>
@@ -80,17 +82,6 @@
 	<dependencyManagement>
 	    <dependencies>
 	        <!-- Project dependencies -->
-	        <dependency>
-	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.core.domain</artifactId>
-	            <version>${project.version}</version>
-	        </dependency>
-	        <dependency>
-	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.client.flex.lib</artifactId>
-	            <version>${project.version}</version>
-	            <type>swc</type>
-	        </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
 	            <artifactId>org.openwms.client.flex.app</artifactId>
@@ -103,6 +94,12 @@
 	            <version>${project.version}</version>
 	            <type>war</type>
 	        </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.client.rest.provider</artifactId>
+                <version>${rest.version}</version>
+                <type>war</type>
+            </dependency>
 	    </dependencies>
 	</dependencyManagement>
 	
