--- a/org.openwms.core/pom.xml
+++ b/org.openwms.core/pom.xml
@@ -38,6 +38,7 @@
         <property.org.graniteds-core.version>1.2.0_SP1</property.org.graniteds-core.version>
         <module.version>0.2-SNAPSHOT</module.version>
         <bundle.version>0.2.SNAPSHOT</bundle.version>
+        <rest.version>0.1-SNAPSHOT</rest.version>
     </properties>
 
     <distributionManagement>
@@ -63,6 +64,7 @@
             <modules>
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.domain.as</module>
+                <module>org.openwms.core.client.rest</module>
                 <module>org.openwms.core.test</module>
                 <module>org.openwms.core.infrastructure.configuration</module>
                 <module>org.openwms.core.infrastructure.configuration.provider</module>
@@ -85,6 +87,7 @@
             <modules>
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.domain.as</module>
+                <module>org.openwms.core.client.rest</module>
                 <module>org.openwms.core.test</module>
                 <module>org.openwms.core.infrastructure.configuration</module>
                 <module>org.openwms.core.infrastructure.configuration.provider</module>
@@ -118,6 +121,11 @@
 	            <version>${module.version}</version>
 	            <type>swc</type>
 	        </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.core.client.rest</artifactId>
+                <version>${rest.version}</version>
+            </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
 	            <artifactId>org.openwms.core.test</artifactId>
