TO DO - issue AJS-7: Implement server-side authentication using Spring Security https://openwms.atlassian.net/browse/AJS-7

--- a/org.openwms.tms/org.openwms.tms.flex.module/.project
+++ b/org.openwms.tms/org.openwms.tms.flex.module/.project
@@ -21,4 +21,11 @@
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<location>/data/servers/apache-tomcat-7.0.22/server1/webapps/org.openwms.client.flex.wrapper</location>
+		</link>
+	</linkedResources>
 </projectDescription>
