TO DO - issue AJS-7: Implement server-side authentication using Spring Security https://openwms.atlassian.net/browse/AJS-7

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /bin/
 target/
 libs/
- 
+
 # OS Files #
 .DS_Store
  
@@ -46,6 +46,7 @@ Desktop.ini
 # IDEA
 ######################
 *.iml
+*.idea
  
 ######################
 # Eclipse
