--- a/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -69,6 +69,17 @@
             <scope>${dependency.scope}</scope>
         </dependency>
 
+                <dependency>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-mapper-asl</artifactId>
+                    <version>1.9.7</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-core-asl</artifactId>
+                    <version>1.9.7</version>
+                </dependency>                
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
