--- a/org.openwms.app/org.openwms.app.par/pom.xml
+++ b/org.openwms.app/org.openwms.app.par/pom.xml
@@ -72,6 +72,42 @@
 
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>flex</id>
+            <activation>
+                <property>
+                    <name>flex</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>org.openwms.client.flex.wrapper</artifactId>
+                    <version>${flex.client.version}</version>
+                    <type>war</type>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>angularjs</id>
+            <activation>
+                <property>
+                    <name>angularjs</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>org.openwms.client.angularjs.wrapper</artifactId>
+                    <version>${angularjs.client.version}</version>
+                    <type>war</type>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -114,12 +150,6 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.service.spring</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.client.flex.wrapper</artifactId>
-            <version>${project.version}</version>
-            <type>war</type>
         </dependency>
 
         <!-- Resources -->
