--- a/org.openwms.app/org.openwms.client.angularjs.wrapper/pom.xml
+++ b/org.openwms.app/org.openwms.client.angularjs.wrapper/pom.xml
@@ -29,13 +29,12 @@
         <artifactId>org.openwms.app</artifactId>
         <version>0.2-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.client.flex.wrapper</artifactId>
-    <version>${flex.client.version}</version>
+    <artifactId>org.openwms.client.angularjs.wrapper</artifactId>
+    <version>${angularjs.client.version}</version>
     <packaging>war</packaging>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
-        <packed.app>${project.groupId}.client.flex.app</packed.app>
     </properties>
     <build>
         <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
@@ -65,35 +64,6 @@
                     </archive>
                     <outputFileNameMapping>@{artifactId}@.@{extension}@</outputFileNameMapping>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.flexmojos</groupId>
-                <artifactId>flexmojos-maven-plugin</artifactId>
-                <version>3.2.0</version><!--$NO-MVN-MAN-VER$-->
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>wrapper</goal>
-                            <goal>copy-flex-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
-                            <templateOutputDirectory>${project.build.directory}/templates</templateOutputDirectory>
-                            <parameters>
-                                <swf>${packed.app}</swf>
-                                <title>openwms.org</title>
-                                <width>100%</width>
-                                <height>100%</height>
-                            </parameters>
-                            <htmlName>index</htmlName>
-                            <templateInclusions>
-                                <String>**/*.jsp</String>
-                                <String>WEB-INF/**/*</String>
-                            </templateInclusions>
-                            <stripVersion>true</stripVersion>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
@@ -188,14 +158,14 @@
                 <dependency>
                     <groupId>${project.groupId}</groupId>
                     <artifactId>org.openwms.common.flex.module</artifactId>
-                    <version>${flex.client.version}</version>
+                    <version>${common.version}</version>
                     <type>swf</type>
                 </dependency>
                 <!-- TMS Project dependencies -->
                 <dependency>
                     <groupId>${project.groupId}</groupId>
                     <artifactId>org.openwms.tms.flex.module</artifactId>
-                    <version>${flex.client.version}</version>
+                    <version>${tms.version}</version>
                     <type>swf</type>
                 </dependency>
                 <dependency>
@@ -334,12 +304,6 @@
         </dependency>
 
         <!-- Project dependencies -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.client.flex.app</artifactId>
-            <version>${flex.client.version}</version>
-            <type>swf</type>
-        </dependency>
         <!-- CORE Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -359,24 +323,6 @@
             <artifactId>org.openwms.core.service.api</artifactId>
             <version>${core.version}</version>
             <scope>${dependency.scope}</scope>
-        </dependency>
-
-        <!-- Granite DS libraries -->
-        <dependency>
-            <groupId>org.graniteds</groupId>
-            <artifactId>granite-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.graniteds</groupId>
-            <artifactId>granite-spring</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.graniteds</groupId>
-            <artifactId>granite-eclipselink</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.graniteds</groupId>
-            <artifactId>granite-toplink</artifactId>
         </dependency>
 
         <!-- Other libraries -->
@@ -412,10 +358,6 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <scope>${dependency.scope}</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.graniteds</groupId>
-            <artifactId>granite-hibernate4</artifactId>
         </dependency>
     </dependencies>
 </project>
