--- a/org.openwms.app/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms.app/org.openwms.client.flex.app/pom.xml
@@ -30,6 +30,7 @@
 		<version>0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.client.flex.app</artifactId>
+    <version>${flex.client.version}</version>
 	<packaging>swf</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
@@ -108,31 +109,31 @@
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.core.domain.as</artifactId>
-                        <version>${core.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.client.flex.lib</artifactId>
-                        <version>${project.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.domain.as</artifactId>
-                        <version>${common.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.flex.lib</artifactId>
-                        <version>${common.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.tms.domain.as</artifactId>
-                        <version>${tms.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
@@ -229,14 +230,14 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.core.domain.as</artifactId>
-			<version>${core.version}</version>
+			<version>${flex.client.version}</version>
 			<type>swc</type>
 			<scope>internal</scope>
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
-            <version>${core.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
             <scope>internal</scope>
         </dependency>
@@ -245,14 +246,14 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain.as</artifactId>
-            <version>${common.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
             <scope>internal</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.flex.lib</artifactId>
-            <version>${common.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
             <scope>internal</scope>
         </dependency>
@@ -261,7 +262,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain.as</artifactId>
-            <version>${tms.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
             <scope>internal</scope>
         </dependency>
