--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -62,13 +62,17 @@
             <modules>
                 <module>org.openwms.app.par</module>
                 <module>org.openwms.app.plan</module>
-                <module>org.openwms.client.flex.app</module>
-                <module>org.openwms.client.flex.wrapper</module>
                 <module>org.openwms.client.rest.provider</module>
             </modules>
         </profile>
         <profile>
-            <id>app</id>
+            <id>flex</id>
+            <activation>
+                <property>
+                    <name>flex</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <modules>
                 <module>org.openwms.app.par</module>
                 <module>org.openwms.app.plan</module>
@@ -76,31 +80,78 @@
                 <module>org.openwms.client.flex.wrapper</module>
                 <module>org.openwms.client.rest.provider</module>
             </modules>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.client.flex.app</artifactId>
+                        <version>${flex.client.version}</version>
+                        <type>swf</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.client.flex.wrapper</artifactId>
+                        <version>${flex.client.version}</version>
+                        <type>war</type>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+        </profile>
+        <profile>
+            <id>angularjs</id>
+            <activation>
+                <property>
+                    <name>angularjs</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <modules>
+                <module>org.openwms.app.par</module>
+                <module>org.openwms.app.plan</module>
+                <module>org.openwms.client.angularjs.app</module>
+                <module>org.openwms.client.angularjs.wrapper</module>
+                <module>org.openwms.client.rest.provider</module>
+            </modules>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.client.angularjs.app</artifactId>
+                        <version>${angularjs.client.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>${project.groupId}</groupId>
+                        <artifactId>org.openwms.client.angularjs.wrapper</artifactId>
+                        <version>${angularjs.client.version}</version>
+                        <type>war</type>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
         </profile>
     </profiles>
 
-	<dependencyManagement>
-	    <dependencies>
+    <dependencyManagement>
+        <dependencies>
 	        <!-- Project dependencies -->
-	        <dependency>
-	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.client.flex.app</artifactId>
-	            <version>${project.version}</version>
-	            <type>swf</type>
-	        </dependency>
-	        <dependency>
-	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.client.flex.wrapper</artifactId>
-	            <version>${project.version}</version>
-	            <type>war</type>
-	        </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.app.par</artifactId>
+                <version>${project.version}</version>
+                <type>par</type>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.app.plan</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.client.rest.provider</artifactId>
                 <version>${rest.version}</version>
                 <type>war</type>
             </dependency>
-	    </dependencies>
-	</dependencyManagement>
-	
+        </dependencies>
+    </dependencyManagement>
+
 </project>
