--- a/org.openwms.common/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms.common/org.openwms.common.domain.as/pom.xml
@@ -30,6 +30,7 @@
 		<version>0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.common.domain.as</artifactId>
+    <version>${flex.client.version}</version>
 	<packaging>swc</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
@@ -88,7 +89,7 @@
 			        <dependency>
 			            <groupId>${project.groupId}</groupId>
 			            <artifactId>org.openwms.core.domain.as</artifactId>
-			            <version>${core.version}</version>
+			            <version>${flex.client.version}</version>
 			            <type>swc</type>
 			        </dependency>
 				</dependencies>
