--- a/org.openwms.common/org.openwms.common.flex.module/pom.xml
+++ b/org.openwms.common/org.openwms.common.flex.module/pom.xml
@@ -22,49 +22,50 @@
  */  
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.openwms</groupId>
-		<artifactId>org.openwms.common</artifactId>
-		<version>0.2-SNAPSHOT</version>
-	</parent>
-	<artifactId>org.openwms.common.flex.module</artifactId>
-	<packaging>swf</packaging>
-	<name>${project.artifactId}</name>
-	<properties>
-		<moduleDir>../../..</moduleDir>
-	</properties>
-	<build>
-		<finalName>${project.artifactId}-${project.version}</finalName>
-		<sourceDirectory>src/main/flex</sourceDirectory>
-		<testSourceDirectory>src/test/flex</testSourceDirectory>
-		<plugins>
-			<plugin>
-				<groupId>org.sonatype.flexmojos</groupId>
-				<artifactId>flexmojos-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<generatorToUse>graniteds2</generatorToUse>
-					<incremental>true</incremental>
-					<configurationReport>false</configurationReport>
-					<sourcePaths>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.openwms</groupId>
+        <artifactId>org.openwms.common</artifactId>
+        <version>0.2-SNAPSHOT</version>
+    </parent>
+    <artifactId>org.openwms.common.flex.module</artifactId>
+    <version>${flex.client.version}</version>
+    <packaging>swf</packaging>
+    <name>${project.artifactId}</name>
+    <properties>
+        <moduleDir>../../..</moduleDir>
+    </properties>
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <sourceDirectory>src/main/flex</sourceDirectory>
+        <testSourceDirectory>src/test/flex</testSourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.flexmojos</groupId>
+                <artifactId>flexmojos-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <generatorToUse>graniteds2</generatorToUse>
+                    <incremental>true</incremental>
+                    <configurationReport>false</configurationReport>
+                    <sourcePaths>
                         <path>${basedir}/src/main/flex</path>
-						<path>${basedir}/src/main/resources</path>
+                        <path>${basedir}/src/main/resources</path>
                         <path>${basedir}/src/main/resources/assets/locale/{locale}</path>
-					</sourcePaths>
-					<contextRoot>openwms</contextRoot>
-					<sourceFile>org/openwms/web/flex/client/common/view/CommonApp.mxml</sourceFile>
-					<warnings>
-						<arrayTostringChanges>true</arrayTostringChanges>
-						<duplicateArgumentNames>false</duplicateArgumentNames>
-					</warnings>
+                    </sourcePaths>
+                    <contextRoot>openwms</contextRoot>
+                    <sourceFile>org/openwms/web/flex/client/common/view/CommonApp.mxml</sourceFile>
+                    <warnings>
+                        <arrayTostringChanges>true</arrayTostringChanges>
+                        <duplicateArgumentNames>false</duplicateArgumentNames>
+                    </warnings>
                     <resourceBundlePath>${basedir}/src/main/resources/assets/locale/{locale}</resourceBundlePath>
                     <compiledLocales>
                         <locale>en_US</locale>
                         <locale>de_DE</locale>
                     </compiledLocales>
-					<allowSourcePathOverlap>true</allowSourcePathOverlap>
+                    <allowSourcePathOverlap>true</allowSourcePathOverlap>
                     <keepAs3Metadatas>
                         <keepAs3Metadata>Bindable</keepAs3Metadata>
                         <keepAs3Metadata>Managed</keepAs3Metadata>
@@ -83,47 +84,47 @@
                         <keepAs3Metadata>Destroy</keepAs3Metadata>
                         <keepAs3Metadata>Protected</keepAs3Metadata>
                     </keepAs3Metadatas>
-					<output>${project.build.directory}/${project.artifactId}.swf</output>
-				</configuration>
-				<dependencies>
+                    <output>${project.build.directory}/${project.artifactId}.swf</output>
+                </configuration>
+                <dependencies>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.client.flex.lib</artifactId>
-                        <version>${core.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.domain.as</artifactId>
-                        <version>${project.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.flex.lib</artifactId>
-                        <version>${project.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
-					<dependency>
-						<groupId>com.adobe.flex</groupId>
-						<artifactId>compiler</artifactId>
+                    <dependency>
+                        <groupId>com.adobe.flex</groupId>
+                        <artifactId>compiler</artifactId>
                         <version>${flex.version}</version>
-						<type>pom</type>
-					</dependency>
-					<dependency>
-						<groupId>org.graniteds</groupId>
-						<artifactId>granite-essentials-swc</artifactId>
+                        <type>pom</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.graniteds</groupId>
+                        <artifactId>granite-essentials-swc</artifactId>
                         <version>${granite.version}</version>
-						<type>swc</type>
-					</dependency>
-					<dependency>
-						<groupId>org.graniteds</groupId>
-						<artifactId>granite-swc</artifactId>
+                        <type>swc</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.graniteds</groupId>
+                        <artifactId>granite-swc</artifactId>
                         <version>${granite.version}</version>
-						<type>swc</type>
-					</dependency>
-				</dependencies>
-			</plugin>
+                        <type>swc</type>
+                    </dependency>
+                </dependencies>
+            </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <configuration>
@@ -137,63 +138,63 @@
                     </filesets>
                 </configuration>
             </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>libs</outputDirectory>
-							<overWriteIfNewer>true</overWriteIfNewer>
-							<excludeGroupIds>com.adobe.flex.framework</excludeGroupIds>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>libs</outputDirectory>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <excludeGroupIds>com.adobe.flex.framework</excludeGroupIds>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-	<repositories>
-		<repository>
-			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/forge</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>granite-repo</id>
-			<url>http://download.java.net/maven/2/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/forge</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+    <repositories>
+        <repository>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/forge</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>granite-repo</id>
+            <url>http://download.java.net/maven/2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/forge</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
-	<dependencies>
+    <dependencies>
 	    <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -206,23 +207,23 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
-            <version>${core.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
             <scope>internal</scope>
         </dependency>
         
         <!-- Project dependencies -->
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>org.openwms.common.domain.as</artifactId>
-            <version>${project.version}</version>
-			<type>swc</type>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.domain.as</artifactId>
+            <version>${flex.client.version}</version>
+            <type>swc</type>
             <scope>internal</scope>
-		</dependency>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.flex.lib</artifactId>
-            <version>${project.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
             <scope>internal</scope>
         </dependency>
@@ -232,23 +233,23 @@
             <artifactId>flex-framework</artifactId>
             <type>pom</type>
         </dependency>
-		<dependency>
-			<groupId>org.graniteds</groupId>
-			<artifactId>granite-essentials-swc</artifactId>
-			<type>swc</type>
-			<scope>internal</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.graniteds</groupId>
-			<artifactId>granite-swc</artifactId>
-			<type>swc</type>
-			<scope>internal</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.asunit</groupId>
-			<artifactId>asunit</artifactId>
-			<type>swc</type>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.graniteds</groupId>
+            <artifactId>granite-essentials-swc</artifactId>
+            <type>swc</type>
+            <scope>internal</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.graniteds</groupId>
+            <artifactId>granite-swc</artifactId>
+            <type>swc</type>
+            <scope>internal</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.asunit</groupId>
+            <artifactId>asunit</artifactId>
+            <type>swc</type>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
