--- a/org.openwms.core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain.as/pom.xml
@@ -30,6 +30,7 @@
 		<version>0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.core.domain.as</artifactId>
+    <version>${flex.client.version}</version>
 	<packaging>swc</packaging>
 	<name>${project.artifactId}</name>
     <description>CORE domain model implemented in ActionScript.</description>
