--- a/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
@@ -30,6 +30,7 @@
 		<version>0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.tms.domain.as</artifactId>
+    <version>${flex.client.version}</version>
 	<packaging>swc</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
@@ -75,13 +76,13 @@
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.core.domain.as</artifactId>
-                        <version>${core.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
                     <dependency>
                         <groupId>${project.groupId}</groupId>
                         <artifactId>org.openwms.common.domain.as</artifactId>
-                        <version>${common.version}</version>
+                        <version>${flex.client.version}</version>
                         <type>swc</type>
                     </dependency>
 				</dependencies>
@@ -169,7 +170,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain.as</artifactId>
-            <version>${core.version}</version>
+            <version>${flex.client.version}</version> 
             <scope>internal</scope>
             <type>swc</type>
         </dependency>
@@ -182,7 +183,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain.as</artifactId>
-            <version>${common.version}</version>
+            <version>${flex.client.version}</version>
             <scope>internal</scope>
             <type>swc</type>
         </dependency>
