--- a/org.openwms.tms/org.openwms.tms.flex.module/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.flex.module/pom.xml
@@ -22,44 +22,45 @@
  */  
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.openwms</groupId>
-		<artifactId>org.openwms.tms</artifactId>
-		<version>0.2-SNAPSHOT</version>
-	</parent>
-	<artifactId>org.openwms.tms.flex.module</artifactId>
-	<packaging>swf</packaging>
-	<name>${project.artifactId}</name>
-	<properties>
-		<moduleDir>../../..</moduleDir>
-		<template.version>2.0.0</template.version>
-	</properties>
-	<build>
-		<finalName>${project.artifactId}-${project.version}</finalName>
-		<sourceDirectory>${project.basedir}/src/main/flex</sourceDirectory>
-		<testSourceDirectory>${project.basedir}/src/test/flex</testSourceDirectory>
-		<plugins>
-			<plugin>
-				<groupId>org.sonatype.flexmojos</groupId>
-				<artifactId>flexmojos-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<generatorToUse>graniteds2</generatorToUse>
-					<incremental>true</incremental>
-					<configurationReport>false</configurationReport>
-					<sourcePaths>
-						<path>${basedir}/src/main/resources</path>
-						<path>${basedir}/src/main/flex</path>
-					</sourcePaths>
-					<contextRoot>openwms</contextRoot>
-					<sourceFile>org/openwms/web/flex/client/tms/view/TMSApp.mxml</sourceFile>
-					<warnings>
-						<arrayTostringChanges>true</arrayTostringChanges>
-						<duplicateArgumentNames>false</duplicateArgumentNames>
-					</warnings>
-					<allowSourcePathOverlap>true</allowSourcePathOverlap>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.openwms</groupId>
+        <artifactId>org.openwms.tms</artifactId>
+        <version>0.2-SNAPSHOT</version>
+    </parent>
+    <artifactId>org.openwms.tms.flex.module</artifactId>
+    <version>${flex.client.version}</version>
+    <packaging>swf</packaging>
+    <name>${project.artifactId}</name>
+    <properties>
+        <moduleDir>../../..</moduleDir>
+        <template.version>2.0.0</template.version>
+    </properties>
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <sourceDirectory>${project.basedir}/src/main/flex</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/flex</testSourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.flexmojos</groupId>
+                <artifactId>flexmojos-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <generatorToUse>graniteds2</generatorToUse>
+                    <incremental>true</incremental>
+                    <configurationReport>false</configurationReport>
+                    <sourcePaths>
+                        <path>${basedir}/src/main/resources</path>
+                        <path>${basedir}/src/main/flex</path>
+                    </sourcePaths>
+                    <contextRoot>openwms</contextRoot>
+                    <sourceFile>org/openwms/web/flex/client/tms/view/TMSApp.mxml</sourceFile>
+                    <warnings>
+                        <arrayTostringChanges>true</arrayTostringChanges>
+                        <duplicateArgumentNames>false</duplicateArgumentNames>
+                    </warnings>
+                    <allowSourcePathOverlap>true</allowSourcePathOverlap>
                     <keepAs3Metadatas>
                         <keepAs3Metadata>Protected</keepAs3Metadata>
                         <keepAs3Metadata>Bindable</keepAs3Metadata>
@@ -77,29 +78,29 @@
                         <keepAs3Metadata>ManagedEvent</keepAs3Metadata>
                         <keepAs3Metadata>Destroy</keepAs3Metadata>
                     </keepAs3Metadatas>
-					<output>${project.build.directory}/${project.artifactId}.swf</output>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.adobe.flex</groupId>
-						<artifactId>compiler</artifactId>
+                    <output>${project.build.directory}/${project.artifactId}.swf</output>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.adobe.flex</groupId>
+                        <artifactId>compiler</artifactId>
                         <version>${flex.version}</version>
-						<type>pom</type>
-					</dependency>
-					<dependency>
-						<groupId>org.graniteds</groupId>
-						<artifactId>granite-essentials-swc</artifactId>
+                        <type>pom</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.graniteds</groupId>
+                        <artifactId>granite-essentials-swc</artifactId>
                         <version>${granite.version}</version>
-						<type>swc</type>
-					</dependency>
-					<dependency>
-						<groupId>org.graniteds</groupId>
-						<artifactId>granite-swc</artifactId>
+                        <type>swc</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.graniteds</groupId>
+                        <artifactId>granite-swc</artifactId>
                         <version>${granite.version}</version>
-						<type>swc</type>
-					</dependency>
-				</dependencies>
-			</plugin>
+                        <type>swc</type>
+                    </dependency>
+                </dependencies>
+            </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <configuration>
@@ -131,45 +132,45 @@
                     </execution>
                 </executions>
             </plugin>
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 
-	<repositories>
-		<repository>
-			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/forge</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>granite-repo</id>
-			<url>http://download.java.net/maven/2/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>sonatype-public</id>
-			<url>http://repository.sonatype.org/content/groups/forge</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+    <repositories>
+        <repository>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/forge</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>granite-repo</id>
+            <url>http://download.java.net/maven/2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/forge</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
-	<dependencies>
+    <dependencies>
         <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -181,7 +182,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
-            <version>${core.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
         </dependency>
         
@@ -189,13 +190,13 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain.as</artifactId>
-            <version>${common.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.flex.lib</artifactId>
-            <version>${common.version}</version>
+            <version>${flex.client.version}</version>
             <type>swc</type>
         </dependency>
         
@@ -203,31 +204,32 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain.as</artifactId>
+            <version>${flex.client.version}</version>
             <type>swc</type>
         </dependency>
 
-		<dependency>
-			<groupId>com.adobe.flex.framework</groupId>
-			<artifactId>flex-framework</artifactId>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>org.graniteds</groupId>
-			<artifactId>granite-essentials-swc</artifactId>
-			<type>swc</type>
-			<scope>internal</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.graniteds</groupId>
-			<artifactId>granite-swc</artifactId>
-			<type>swc</type>
-			<scope>internal</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.asunit</groupId>
-			<artifactId>asunit</artifactId>
-			<type>swc</type>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.adobe.flex.framework</groupId>
+            <artifactId>flex-framework</artifactId>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.graniteds</groupId>
+            <artifactId>granite-essentials-swc</artifactId>
+            <type>swc</type>
+            <scope>internal</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.graniteds</groupId>
+            <artifactId>granite-swc</artifactId>
+            <type>swc</type>
+            <scope>internal</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.asunit</groupId>
+            <artifactId>asunit</artifactId>
+            <type>swc</type>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
