--- a/org.openwms.tms/pom.xml
+++ b/org.openwms.tms/pom.xml
@@ -58,8 +58,33 @@
     <profiles>
         <profile>
             <id>all</id>
+            <modules>
+                <module>org.openwms.tms.domain</module>
+                <module>org.openwms.tms.integration</module>
+                <module>org.openwms.tms.integration.jpa</module>
+                <module>org.openwms.tms.service.api</module>
+                <module>org.openwms.tms.service.spring</module>
+                <module>org.openwms.tms.util</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>tms</id>
+            <modules>
+                <module>org.openwms.tms.domain</module>
+                <module>org.openwms.tms.integration</module>
+                <module>org.openwms.tms.integration.jpa</module>
+                <module>org.openwms.tms.service.api</module>
+                <module>org.openwms.tms.service.spring</module>
+                <module>org.openwms.tms.util</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>flex</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>flex</name>
+                    <value>true</value>
+                </property>
             </activation>
             <modules>
                 <module>org.openwms.tms.domain</module>
@@ -73,11 +98,15 @@
             </modules>
         </profile>
         <profile>
-            <id>tms</id>
+            <id>angularjs</id>
+            <activation>
+                <property>
+                    <name>angularjs</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <modules>
                 <module>org.openwms.tms.domain</module>
-                <module>org.openwms.tms.domain.as</module>
-                <module>org.openwms.tms.flex.module</module>
                 <module>org.openwms.tms.integration</module>
                 <module>org.openwms.tms.integration.jpa</module>
                 <module>org.openwms.tms.service.api</module>
@@ -102,12 +131,6 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.tms.domain.as</artifactId>
-                <version>${module.version}</version>
-                <type>swc</type>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.integration</artifactId>
                 <version>${module.version}</version>
             </dependency>
@@ -125,12 +148,6 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.tms.service.spring</artifactId>
                 <version>${module.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.tms.flex.module</artifactId>
-                <version>${module.version}</version>
-                <type>swf</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
